@@ -1,10 +1,3 @@
--adding new cards while in 'learn ahead of schedule' should break out of
- learning ahead (add 'cards added' slot to scheduler?)
-
--don't click learn ahead of schedule everytime
-
--rebuild queue automatically after roll-over time?
-
 -move option to always randomise queue to config screen
 
 -update card docstrings, add stuff on all variables
@@ -43,6 +36,8 @@
 -write more tests
 
 -don't import * for Qt
+
+-test rollover
 
 
 -make categories a set?
