@@ -7,7 +7,6 @@ import copy
 
 from mnemosyne.libmnemosyne.card import Card
 from mnemosyne.libmnemosyne.scheduler import Scheduler
-from mnemosyne.libmnemosyne.component_manager import ui_controller_review
 from mnemosyne.libmnemosyne.component_manager import database, config, log
 
 
@@ -16,9 +15,6 @@ from mnemosyne.libmnemosyne.component_manager import database, config, log
 class SM2Mnemosyne(Scheduler):
     
     name = "SM2 Mnemosyne"
-    
-    def __init__(self):
-        self.reset()
 
     def reset(self):
         self.queue = []
@@ -85,7 +81,6 @@ class SM2Mnemosyne(Scheduler):
     def rebuild_queue(self, learn_ahead=False):
         self.queue = []
         self.facts = []
-        ui_controller_review().clear()
         db = database()
         if not db.is_loaded():
             return
@@ -95,14 +90,14 @@ class SM2Mnemosyne(Scheduler):
         # Do the cards that are scheduled for today (or are overdue), but
         # first do those that have the shortest interval, as being a day
         # late on an interval of 2 could be much worse than being a day late
-        # on an interval of 50.
+        # on an interval of 25.
         if self.stage == 1:
             for _card_id, _fact_id in \
                     db.cards_due_for_ret_rep(sort_key="interval"):
                 self.queue.append(_card_id)
                 self.facts.append(_fact_id)
                 # Do a trade-off between memory usage and redoing the query.
-                if len(self.queue) > 50:
+                if len(self.queue) > 25:
                     return
             if len(self.queue):
                 return
@@ -204,19 +199,19 @@ class SM2Mnemosyne(Scheduler):
         # to learn. The user can signal that he wants to learn ahead by
         # calling rebuild_queue with 'learn_ahead' set to True.
         # Don't shuffle this queue, as it's more useful to review the
-        # earliest scheduled cards first. We only put 5 cards at the same
+        # earliest scheduled cards first. We only put 25 cards at the same
         # time into the queue, in order to save memory.
         # TODO: this requires the user to click 'learn ahead of schedule'
         # again after 5 cards. If it's possible to make this algorithm
         # stateless and return 1 card at the time, this will be solved
         # automatically.
-        # Note: this will not revisit failed cards when learning ahead.
         if learn_ahead == False:
             return
-        for _card_id, _fact_id in db.cards_learn_ahead(sort_key="next_rep"):
+        for _card_id, _fact_id in db.cards_learn_ahead(sort_key="next_rep",
+                                                       limit=25):
             self.queue.append(_card_id)
-            if len(self.queue) >= 5:
-                return
+        # Relearn cards which we got wrong during learn ahead.
+        self.stage = 2
 
     def get_next_card(self, learn_ahead=False):
         # Populate queue if it is empty.
